# bookforge

./: DATA_INTEGRATION_SUMMARY.md  DEVELOPMENT_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml
.sovereignspec/: constitution.md
.sovereignspec/adr/: ADR-001-local-first-architecture.md
.sovereignspec/agents/opencode/: artifacts.json
.sovereignspec/docs/bookforge-runtime/: specification.md
.sovereignspec/docs/sovereign-ai-book/: specification.md
.sovereignspec/graph/: graph.json
.sovereignspec/specs/: bookforge-runtime.sspec  sovereign-ai-book.sspec
.sovereignspec/tasks/: bookforge-runtime-tasks.md  sovereign-ai-book-tasks.md
data/: manifest.json
examples/: analyze_graph.py  analyze_graph_simple.py  demo.py  generate_blueprint.py  generate_chapters.py
output/: book-20260623-012127.html  book-20260623-082109.html  book_blueprint.json  chapter_1.json  chapter_2.json  chapter_3.json  compilation.json  graph_summary.json  theme_details.json
src/bookforge/: __init__.py  cli.py
src/bookforge/agents/: __init__.py  base.py  reviewer.py
src/bookforge/api/: __init__.py  routes.py
src/bookforge/knowledge/: __init__.py  analyzer.py  graph.py  importer.py
src/bookforge/planning/: __init__.py  blueprint.py  themes.py
src/bookforge/publishing/: __init__.py  compiler.py  formats.py
tests/: test_imports.py
tests/agents/: test_reviewer.py
tests/integration/: test_danielkliewer.py
tests/knowledge/: test_analyzer.py  test_graph.py  test_importer.py
tests/planning/: test_blueprint.py  test_themes.py
tests/publishing/: test_compiler.py
tests/writing/: test_generator.py
(+10 files in other folders)
